--- a/sass/components-new/studio/_hero.scss
+++ b/sass/components-new/studio/_hero.scss
@@ -14,7 +14,7 @@
       $additional-background,
       $additional-background
     ),
-    url("../../../hero/hero_m_x1.jpg");
+    url("../../../images/hero/hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
