--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -14,7 +14,7 @@
       $additional-background,
       $additional-background
     ),
-    url("../../../images/hero/hero.jpg");
+    url("../images/hero/hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
