--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@
 @import "./components-new/general/footer";
 
 // studio
-@import "./hero";
+@import "./components-new/studio/hero";
 @import "./components-new/studio/advantages";
 @import "./components-new/studio/work";
 @import "./components-new/studio/comand";
