--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,7 +22,7 @@
 @import "./components/general/footer";
 
 // studio
-@import "./hero";
+@import "./components/hero";
 @import "./components/studio/advantages";
 @import "./components/studio/work";
 @import "./components/studio/comand";
