--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -14,7 +14,7 @@
       $additional-background,
       $additional-background
     ),
-    url("/img/hero/hero_m_x1.jpg");
+    url("../img/hero/hero_m_x1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
